--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -31,17 +31,17 @@ jobs:
           node-version: 12
           
       - name: install yarn
-      - uses: borales/actions-yarn@v2.0.0
+        uses: borales/actions-yarn@v2.0.0
         with:
           cmd: install # will run `yarn install` command
           
       - name: Build react-app
-      - run: build yarn
+        run: build yarn
       
       - name: Install Surge
-      - run: npm install -g surge
+        run: npm install -g surge
       
       - name: Deploy surge
-      - run: surge ./build qulzamreactproject.surge.sh --token ${{ tokens.SURGE_TOKEN }}
+        run: surge ./build qulzamreactproject.surge.sh --token ${{ tokens.SURGE_TOKEN }}
       
       
