--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -42,6 +42,6 @@ jobs:
         run: npm install -g surge
       
       - name: Deploy surge
-        run: surge ./build qulzamreactproject.surge.sh --token ${{ tokens.SURGE_TOKEN }}
+        run: surge ./build qulzamreactproject.surge.sh --token ${{ secrets.SURGE_TOKEN }}
       
       
