--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Deploy
 
 # Controls when the action will run. 
 on:
@@ -30,13 +30,13 @@ jobs:
         with:
           node-version: 12
           
-      - name: install yarn
-        uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install # will run `yarn install` command
+   #   - name: install yarn
+   #     uses: borales/actions-yarn@v2.0.0
+   #     with:
+    #      cmd: install # will run `yarn install` command
           
       - name: Build react-app
-        run: build yarn
+        run: npm install
       
       - name: Install Surge
         run: npm install -g surge
