--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -30,18 +30,18 @@ jobs:
         with:
           node-version: 12
           
-   #   - name: install yarn
-   #     uses: borales/actions-yarn@v2.0.0
-   #     with:
-    #      cmd: install # will run `yarn install` command
+      - name: install yarn
+        uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install # will run `yarn install` command
           
       - name: Build react-app
-        run: npm install
+        run: yarn build
       
       - name: Install Surge
         run: npm install -g surge
       
       - name: Deploy surge
-        run: surge ./ qulzamreactproject.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./build qulzamreactproject.surge.sh --token ${{ secrets.SURGE_TOKEN }}
       
       
